# cart-pole-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  requirements.txt  run.py
config/: control_param.json  model_param.json  super_param.json
control/: CMakeLists.txt  control_api.py  fg_eval.cpp  fg_eval.h  nmpc.cpp  nmpc.h  nmpc.py  nmpc_problem.cpp  nmpc_problem.h
control/nmpc/: fg_eval.cpp  nmpc_problem.cpp  nmpc_problem.h
controller/: CMakeLists.txt  lmpc.py  lqr.py  nmpc.py
controller/nmpc/: CMakeLists.txt  fg_eval.cpp  fg_eval.h  nmpc.cpp  nmpc.h  nmpc_problem_factory.h  nmpc_problem_interface.h  nmpc_problem_regular.cpp  nmpc_problem_regular.h
controller/nmpc/loose/: fg_eval_loose.cpp  fg_eval_loose.h  nmpc_problem_loose.cpp  nmpc_problem_loose.h
controller/nmpc/regular/: fg_eval_regular.cpp  fg_eval_regular.h  nmpc_problem_regular.cpp  nmpc_problem_regular.h
data/: README.md
data/NMPC_regular/: control_param.json
data/constrained_LMPC/: control_param.json
data/finite_LQR/: control_param.json
data/infinite_LQR_CARE/: control_param.json
data/unconstrained_LMPC/: control_param.json
model/: model.py
proto/: CMakeLists.txt  data.proto
system/: plant.py  rk4step.py
utils/: CMakeLists.txt  c2d.py  json_utils.py  utils.hpp  utils.py
vis/: vis_data.py
vis/examples/: test_viz.py
